Fix sub-sub-nav spacing

--- a/assets/dev/scss/_site-navigation.scss
+++ b/assets/dev/scss/_site-navigation.scss
@@ -172,6 +172,10 @@ Site Navigation
 
         .sub-menu {
           margin: -43px 0 0 -149px;
+
+          li {
+            width: auto;
+          }
         }
       }
 
